clusters/k3s-homelab/default/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx # Pods with such label belongs to this specific deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template: # This is a template for our delpoyment pods
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
